# AI-Kaeyris

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Jalon1.md  Jalon2.md  Jalon3.md  Jalon4.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  memo.md  playbook.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: main.py
app/adapters/: llm.py  local_models.py  transcription.py
app/core/: auth.py  config.py  datetime_serialization.py  db.py  errors.py  health.py  logging.py  metrics.py  metrics_middleware.py  models.py  rate_limit.py  redis_client.py  request_context.py  security_headers.py  tracing.py  user_schemas.py  users.py
app/jobs/: __init__.py  demo.py  jdr.py  llm.py
docker/: Dockerfile
docker/caddy/: Caddyfile
docker/prometheus/: prometheus.yml
docs/: Jalon1.md  Jalon2.md  Jalon3.md  Jalon4.md  Jalon5.md  journal.md  memo.md  playbook.md  runbook.md
docs/adr/: 0001-platform-architecture.md  0002-service-structure-and-error-format.md  0003-authentication-strategy.md  0004-async-jobs-and-rate-limiting.md  0005-llm-adapter-and-providers.md  0006-jdr-service.md  0007-non-diarised-mode.md  0008-observability.md  0009-cicd-security.md  0010-deployment.md  0011-user-password-auth.md  0012-campaign-auth-context.md  0013-identity-refacto-pj-scoping.md  0014-postgres-dev-stack.md
docs/services/: jdr.md
migrations/: env.py
migrations/versions/: 0001_initial_jdr_schema.py  0002_add_campaign_context.py  0003_non_diarised_mode.py  0004_normalize_transcription_mode_lowercase.py  0005_user_password_auth.py  0006_campaign_auth_context.py  0007_campaigns_crud.py  0008_identity_refacto_pj_scoping.py  0009_current_job_and_audio_stream.py  0010_session_transcription_edit.py  0011_job_kind_status_non_native_enum.py  0012_pj_unique_per_campaign.py  0013_jdr_model_settings.py  0014_jdr_model_settings_local_path.py  0015_jdr_model_settings_cloud_model.py  0016_jdr_model_settings_ollama_model.py  0017_jdr_local_model_validation.py  0018_jdr_model_settings_nullable_providers.py  0019_jdr_artifact_provenance.py  0020_jdr_elements_freeform_category.py
scripts/: generate_api_key.py
specs/001-kaeyris-jdr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-non-diarised-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-user-password-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-campaign-auth-context/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-tz-aware-datetime-serialization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-campaigns-crud-session-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-identity-refacto-pj-scoping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-current-job-audio-stream/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-pj-update/: plan.md  (+5 more)
tests/: conftest.py  test_docker_compose.py  test_health.py  test_main_lifespan.py
(+213 files in other folders)
